Fixed staging bugs in develop branch

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="span5 copy">
           <h4>WHY THE WORLD NEEDS EULERGY</h4>
 	  <p>Every year thousands of students world-wide produce research and development work as part of their curricula. The majority of their works seldom break from the academic institution or the payment walls of journals.</p>
-	  <p>Every year companies, charities and governments struggle to find disruptive solutions to a constantly changing market, sorely needing fresh insight </p>
+	  <p>Every year companies, charities and governments struggle to find disruptive solutions to a constantly changing market, sorely needing fresh insight. </p>
 	  <p>At Eulergy we believe in a different vision. We believe that academic work can be used to solve real problems. That students can be rewarded for their efforts and companies can access a pool of creative minds and future employees.</p>
         </div>
       </div>
