--- a/index.html
+++ b/index.html
@@ -204,9 +204,13 @@
           </div>
           <div class="row-fluid">
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
+<a class="coinbase-button" 
+data-button-style="custom_large"
+data-button-text="Preorder with Bitcoin"
+data-code="6b7df51054df5dd7e35b286d182058d0" href="https://coinbase.com/checkouts/6b7df51054df5dd7e35b286d182058d0">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>          
+  <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+
           </div>
           </div>
           <div class="row-fluid">
